# Pcynlitx.Win

./: Build.Project.Make.Files.ps1  CMakeLists.txt  Copyright  Mingw64_Installation  README.md  ReFactorProjectLibrary.ps1  ReFactorProjectLibrary.sh  Run.Make.File.Builder.sh  Setup.Project.ps1  Update_Project.ps1  Update_Project.sh  Update_Project_Binaries.ps1  clean_cmake_builds.ps1  configure_cmake.ps1
CLASS.DECLERATION.READER/ClassReader/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile.ClassReader.ps1  Compile.ClassReader.sh  Run_Class_Reader_Project_Compiler.sh  Update.ClassReader.sh
CLASS.DECLERATION.READER/DataBaseManagement/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile.DataBaseManagement.ps1  Compile.DataBaseManagement.sh  Run_DB_Management_Project_Compiler.sh  Update.DataBaseManagement.sh
CLASS.DECLERATION.READER/ProcessInitialization/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile.Process.Initialization.ps1  Compile.Process.Initialization.sh  Run_Reader_Init_Compiler.sh  Update.ProcessInitialization.sh
CLASS.DECLERATION.READER/Tools/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile.Tools.ps1  Compile.Tools.sh  Perform.Documentation.ps1  Run_Tools_Compiler.sh  Update.Tools.sh
CLIENT.CLASS.BUILDER/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile_Client_Class_Builder_Project.ps1  Compile_Client_Class_Builder_Project.sh  Run_Client_Class_Project_Compiler.sh  Update_Client_Class_Builder_Project.sh
CLIENT.CLASS.BUILDER/ClassRebuilder/: ClassRebuilder.cpp  ClassRebuilder.h  ClassRebuilder_Main_File.cpp
CLIENT.CLASS.BUILDER/ClassRebuilder_Data_Collector/: ClassRebuilder_Data_Collector.cpp  ClassRebuilder_Data_Collector.h  ClassRebuilder_Data_Collector_Main_File.cpp
CLIENT.CLASS.BUILDER/ClassRebuilder_Initializer/: ClassRebuilder_Initializer.cpp  ClassRebuilder_Initializer.h  ClassRebuilder_Initializer_Main_File.cpp
CLIENT.CLASS.BUILDER/HeaderRebuilder/: HeaderRebuilder.cpp  HeaderRebuilder.h  HeaderRebuilder_Main_File.cpp
DESCRIPTOR.FILE.READER/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile_Descriptor_File_Reader_Project.ps1  Compile_Descriptor_File_Reader_Project.sh  Run_Descriptor_File_Reader_Project_Compiler.sh  Update_Process_Descriptor_File_Reader_Project.sh
DESCRIPTOR.FILE.READER/Descriptor_File_Data_Collector/: Descriptor_File_Data_Collector.cpp  Descriptor_File_Data_Collector.h  Descriptor_File_Data_Collector_Main_File.cpp
DESCRIPTOR.FILE.READER/Descriptor_File_Number_Processor/: Descriptor_File_Number_Processor.cpp  Descriptor_File_Number_Processor.h  Descriptor_File_Number_Processor_Main_File.cpp
DESCRIPTOR.FILE.READER/Descriptor_File_Reader/: Descriptor_File_Reader.cpp  Descriptor_File_Reader.h  Descriptor_File_Reader_Construction.ps1  Descriptor_File_Reader_Main_File.cpp  descriptor_file_reader.make
DESCRIPTOR.FILE.READER/Descriptor_File_Reader_Initializer/: Descriptor_File_Reader_Initializer.cpp  Descriptor_File_Reader_Initializer.h  Descriptor_File_Reader_Initializer_Main_File.cpp
DESCRIPTOR.FILE.READER/Descriptor_File_Reader_Syntax_Controller/: Descriptor_File_Reader_Syntax_Controller.cpp  Descriptor_File_Reader_Syntax_Controller.h  Descriptor_File_Reader_Syntax_Controller_Main_File.cpp
DESCRIPTOR.FILE.READER/Header_File_Descriptions_Reader/: Header_File_Descriptions_Reader.cpp  Header_File_Descriptions_Reader.h  Header_File_Descriptions_Reader_Main_File.cpp
DESCRIPTOR.FILE.READER/Include_Directory_Description_Reader/: Include_Directory_Description_Reader.cpp  Include_Directory_Description_Reader.h  Include_Directory_Description_Reader_Main_File.cpp
DESCRIPTOR.FILE.READER/Inter_Thread_Class_Description_Reader/: Inter_Thread_Class_Description_Reader.cpp  Inter_Thread_Class_Description_Reader.h  Inter_Thread_Class_Description_Reader_Main_File.cpp
DESCRIPTOR.FILE.READER/Inter_Thread_Data_Type_Description_Reader/: Inter_Thread_Data_Type_Description_Reader.cpp  Inter_Thread_Data_Type_Description_Reader.h  Inter_Thread_Data_Type_Description_Reader_Main_File.cpp
DESCRIPTOR.FILE.READER/Library_Descriptions_Reader/: Library_Descriptions_Reader.cpp  Library_Descriptions_Reader.h  Library_Descriptions_Reader_Main_File.cpp
DESCRIPTOR.FILE.READER/Main_File_Descriptions_Reader/: Main_File_Descriptions_Reader.cpp  Main_File_Descriptions_Reader.h  Main_File_Descriptions_Reader_Main_File.cpp
DESCRIPTOR.FILE.WRITER/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile_Descriptor_File_Writer_Project.ps1  Compile_Descriptor_File_Writer_Project.sh  Run_Descriptor_File_Writer_Compiler.sh  Update_Descriptor_File_Writer_Project.sh
EXECUTABLE.FILE.BUILDER/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile_Executable_File_Builder_Project.ps1  Compile_Executable_File_Builder_Project.sh  Run_Exe_Builder_Compiler.sh  Update_Executable_File_Builder_Project.sh
GUI.DEVELOPMENT/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  GUI_Compiler.ps1  GUI_Compiler.sh  GUI_MakeFile.make  INCLUDE_PATHS_FOR_GUI_MAKE_FILE  PATHS_FOR_GUI_MAKE_FILES  Pcynlitx.exe.manifest  Run_GUI_Compiler.sh  Run_Project_Binary_Files_Compiler.sh  Run_Project_File_Updater.sh  Update_Icon_Files.ps1  Update_Project_Binaries.sh  Update_Project_Install_Files.sh  wxLauncher.cpp
INSTALLER.DEVELOPMENT/: README.txt  (+6 more)
PROJECT.MANAGEMENT.TOOLS/: Build_GUI_Make_File_Header  CMakeLists.txt  Exe_Builder  Set_Ignoring_Files.ps1  Set_Ignoring_Files.sh  Setup_GUI_Project  Setup_Project  build_project_directories.ps1  build_project_management_tools.ps1  build_project_management_tools.sh
SERVER.CLASS.BUILDER/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile_Server_Class_Builder_Project.ps1  Compile_Server_Class_Builder_Project.sh  Run_Server_Builder_Project_Compiler.sh  Update_Server_Class_Builder_Project.sh
SMART.POINTER.BUILDER/: Build.Make.Files.ps1  Build.Make.Files.sh  CMakeLists.txt  Compile.MT.SmartPointer.ps1  Compile.MT.SmartPointer.sh  Run_Smart_Pointer_Project_Compiler.sh  Update.MT.SmartPointer.sh
(+657 files in other folders)
