
set( CMAKE_CXX_COMPILER "C:/Program Files/Mingw64/bin/g++.exe" )
set( CMAKE_C_COMPILER "C:/Program Files/Mingw64/bin/gcc.exe" )

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

cmake_minimum_required(VERSION 3.10)

project(pcynlitx_win VERSION 1.0)

add_subdirectory(KERNEL.DEVELOPMENT)

add_subdirectory(CLASS.DECLERATION.READER)

add_subdirectory(CLIENT.CLASS.BUILDER)

add_subdirectory(DESCRIPTOR.FILE.READER)

add_subdirectory(DESCRIPTOR.FILE.WRITER)

add_subdirectory(EXECUTABLE.FILE.BUILDER)

add_subdirectory(SERVER.CLASS.BUILDER)

add_subdirectory(SMART.POINTER.BUILDER)

add_subdirectory(PROJECT.MANAGEMENT.TOOLS)

add_subdirectory(GUI.DEVELOPMENT)


add_executable(pcynlitx_kernel 

        ${CMAKE_CURRENT_SOURCE_DIR}/KERNEL.DEVELOPMENT/Kernel/Kernel_Main_File.cpp)


target_link_libraries(pcynlitx_kernel PUBLIC 

     Kernel server_builder smart_ptr ClassRebuilder des_reader des_writer exe_builder
     
     class_reader DataBsMng proc_init tools PrgMng)



target_link_directories(pcynlitx_kernel PUBLIC 

    ${CMAKE_CURRENT_SOURCE_DIR}/KERNEL.DEVELOPMENT
    
    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/ClassReader

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/DataBaseManagement

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/ProcessInitialization

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools


    ${CMAKE_CURRENT_SOURCE_DIR}/CLIENT.CLASS.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTOR.FILE.READER

    ${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTOR.FILE.WRITER

    ${CMAKE_CURRENT_SOURCE_DIR}/EXECUTABLE.FILE.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/SERVER.CLASS.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/SMART.POINTER.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/PROJECT.MANAGEMENT.TOOLS

)



target_include_directories(tools PUBLIC 

    ${CMAKE_CURRENT_SOURCE_DIR}/KERNEL.DEVELOPMENT
    
    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/ClassReader

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/DataBaseManagement

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/ProcessInitialization

    ${CMAKE_CURRENT_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools


    ${CMAKE_CURRENT_SOURCE_DIR}/CLIENT.CLASS.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTOR.FILE.READER

    ${CMAKE_CURRENT_SOURCE_DIR}/DESCRIPTOR.FILE.WRITER

    ${CMAKE_CURRENT_SOURCE_DIR}/EXECUTABLE.FILE.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/SERVER.CLASS.BUILDER

    ${CMAKE_CURRENT_SOURCE_DIR}/SMART.POINTER.BUILDER


    
    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/Cpp_FileOperations

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/CharOperator

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/Compiler

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/Compiler_Descriptor_File_Reader

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/Custom_System_Interface

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/DirectoryOperations

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/HeaderFileBuilder

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/IntToCharTranslater

    ${CMAKE_SOURCE_DIR}/CLASS.DECLERATION.READER/Tools/StringOperator

 )